new page + links

--- a/forexglobal/about-us/kids.html
+++ b/forexglobal/about-us/kids.html
@@ -54,7 +54,7 @@
                 <li><a href="licenses-and-regulations.html">Licenses and Regulations</a></li>
                 <li><a href="security-of-funds.html">Security of Funds</a></li>
                 <li><a href="stp-broker.html">STP Broker</a></li>
-                <li><a href="#">Legal Documents</a></li>
+                <li><a href="legal-documents.html">Legal Documents</a></li>
                 <li><a>KIDs</a></li>
                 <li><a href="careers.html">Careers</a></li>
               </ul>
@@ -112,9 +112,9 @@
         <p>If you have any questions, contact Forex24 customer support team at <a href="mailto:support@forex24.com">support@forex24.com</a>.</p>
         <b>Key Information Documents</b>
         <p><a href="../img/pdf/Key-Information-Document-Forex-v1.0.0.pdf" target="_blank">Forex CFDs</a></p>
-        <p><a href="../img/pdf/Key-Information-Document-Commodities-v1.0.0" target="_blank">Treasury and Commodities CFDs</a></p>
-        <p><a href="../img/pdf/Key-Information-Document-Indices-v1.0.0" target="_blank">Indices CFDs</a></p>
-        <p><a href="../img/pdf/Key-Information-Document-Stocks-v1.0.0" target="_blank">Stocks CFDs</a></p>
+        <p><a href="../img/pdf/Key-Information-Document-Commodities-v1.0.0.pdf" target="_blank">Treasury and Commodities CFDs</a></p>
+        <p><a href="../img/pdf/Key-Information-Document-Indices-v1.0.0.pdf" target="_blank">Indices CFDs</a></p>
+        <p><a href="../img/pdf/Key-Information-Document-Stocks-v1.0.0.pdf" target="_blank">Stocks CFDs</a></p>
       </div>
     </div>
   </section>
@@ -152,7 +152,7 @@
           <li><a href="licenses-and-regulations.html">Licenses & Regulations</a></li>
           <li><a href="security-of-funds.html">Security Of Funds</a></li>
           <li><a href="stp-broker.html">STP Broker</a></li>
-          <li><a href="#">Legal Documents</a></li>
+          <li><a href="legal-documents.html">Legal Documents</a></li>
           <li><a class="footer__active">KIDs</a></li>
           <li><a href="careers.html">Careers</a></li>
         </ul>
