--- a/forexglobal/about-us/legal-documents.html
+++ b/forexglobal/about-us/legal-documents.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
-  <title>Account Comparison - Forex24 Global</title>
+  <title>Legal Documents - Forex24 Global</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
@@ -51,12 +51,12 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>About</b></li>
-                <li><a href="../about-us/licenses-and-regulations.html">Licenses and Regulations</a></li>
-                <li><a href="../about-us/security-of-funds.html">Security of Funds</a></li>
-                <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
-                <li><a href="../about-us/legal-documents.html">Legal Documents</a></li>
-                <li><a href="../about-us/kids.html">KIDs</a></li>
-                <li><a href="../about-us/careers.html">Careers</a></li>
+                <li><a href="licenses-and-regulations.html">Licenses and Regulations</a></li>
+                <li><a href="security-of-funds.html">Security of Funds</a></li>
+                <li><a href="stp-broker.html">STP Broker</a></li>
+                <li><a>Legal Documents</a></li>
+                <li><a href="kids.html">KIDs</a></li>
+                <li><a href="careers.html">Careers</a></li>
               </ul>
             </div>
           </li>
@@ -65,13 +65,13 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Trading</b></li>
-                <li><a href="account-types.html">Account Types</a></li>
-                <li><a>Account Comparison</a></li>
-                <li><a href="product-specification.html">Product Specification</a></li>
-                <li><a href="trading-specification.html">Trading Specification</a></li>
+                <li><a href="../trading/account-types.html">Account Types</a></li>
+                <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
+                <li><a href="../trading/product-specification.html">Product Specification</a></li>
+                <li><a href="../trading/trading-specification.html">Trading Specification</a></li>
                 <li><a href="#">Platforms</a></li>
-                <li><a href="funding-and-withdrawal.html">Funding and Withdrawal</a></li>
-                <li><a href="announcements.html">Announcements</a></li>
+                <li><a href="../trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
+                <li><a href="../trading/announcements.html">Announcements</a></li>
               </ul>
             </div>
           </li>
@@ -105,8 +105,21 @@
   </header>
   <section class="inner">
     <div class="container">
-      <h1 class="inner__name">Account comparison</h1>
-      <p class="inner__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio minus, provident dolores quos. Facere, vel expedita rem. Facilis unde, quidem ab animi placeat doloribus. Debitis, placeat, cum dolor accusamus recusandae fuga eligendi ipsum, molestiae eos, ad sed? Esse aperiam, amet laboriosam assumenda eos voluptatem magnam ea officia odio dolorem. Beatae.</p>
+      <h1 class="inner__name">Legal Documents</h1>
+      <div class="inner__icon  inner__icon--legal"></div>
+      <div class="inner__text  inner__text--legal">
+        <p><a href="../img/pdf/Pillar-III-Disclosure-2017.pdf" target="_blank">Pillar III Disclosure</a></p>
+        <p><a href="../img/pdf/Client-Agreement-v1.3.1.pdf" target="_blank">Client Agreement</a></p>
+        <p><a href="../img/pdf/Best-Interest-and-Order-Execution-Summary.pdf" target="_blank">Best Interest and Order Execution Summary</a></p>
+        <p><a href="../img/pdf/Client-Categorisation-Policy.pdf" target="_blank">Client Categorisation Policy</a></p>
+        <p><a href="../img/pdf/Conflicts-of-Interest-Policy-Summary.pdf" target="_blank">Conflicts of Interest Policy Summary</a></p>
+        <p><a href="../img/pdf/Risk-Disclosure-Warning-Notice-1.0.1-2.pdf" target="_blank">Risk Disclosure Warning Notice</a></p>
+        <p><a href="../img/pdf/Company-Information.pdf" target="_blank">Company Information</a></p>
+        <p><a href="../img/pdf/Complaints-Procedure.pdf" target="_blank">Complaints Procedure</a></p>
+        <p><a href="../img/pdf/Investor-Compensation-Fund.pdf" target="_blank">Investor Compensation Fund</a></p>
+        <p><a href="../img/pdf/Privacy-and-Cookies-Policy.pdf" target="_blank">Privacy and Cookies Policy</a></p>
+        <p><a href="../img/pdf/Website-Use.pdf" target="_blank">Website Use</a></p>
+      </div>
     </div>
   </section>
   <section class="payment  payment--inner">
@@ -140,23 +153,23 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>About</b></li>
           <li><hr></li>
-          <li><a href="../about-us/licenses-and-regulations.html">Licenses & Regulations</a></li>
-          <li><a href="../about-us/security-of-funds.html">Security Of Funds</a></li>
-          <li><a href="../about-us/stp-broker">STP Broker</a></li>
-          <li><a href="../about-us/legal-documents.html">Legal Documents</a></li>
-          <li><a href="../about-us/kids.html">KIDs</a></li>
-          <li><a href="../about-us/careers.html">Careers</a></li>
+          <li><a href="licenses-and-regulations.html">Licenses & Regulations</a></li>
+          <li><a href="security-of-funds.html">Security Of Funds</a></li>
+          <li><a href="stp-broker.html">STP Broker</a></li>
+          <li><a class="footer__active">Legal Documents</a></li>
+          <li><a href="kids.html">KIDs</a></li>
+          <li><a href="careers.html">Careers</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Trading</b></li>
           <li><hr></li>
-          <li><a href="account-types.html">Account Types</a></li>
-          <li><a class="footer__active">Account Comparison</a></li>
-          <li><a href="product-specification.html">Product Spesification</a></li>
-          <li><a href="trading-specification.html">Trading Spesification</a></li>
+          <li><a href="../trading/account-types.html">Account Types</a></li>
+          <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
+          <li><a href="../trading/product-specification.html">Product Spesification</a></li>
+          <li><a href="../trading/trading-specification.html">Trading Spesification</a></li>
           <li><a href="#">Platforms</a></li>
-          <li><a href="funding-and-withdrawal.html">Funding and Withdrawal</a></li>
-          <li><a href="announcements.html">Announcements</a></li>
+          <li><a href="../trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
+          <li><a href="../trading/announcements.html">Announcements</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Resources</b></li>
