--- a/forexglobal/about-us/licenses-and-regulations.html
+++ b/forexglobal/about-us/licenses-and-regulations.html
@@ -54,7 +54,7 @@
                 <li><a>Licenses and Regulations</a></li>
                 <li><a href="security-of-funds.html">Security of Funds</a></li>
                 <li><a href="stp-broker.html">STP Broker</a></li>
-                <li><a href="#">Legal Documents</a></li>
+                <li><a href="legal-documents.html">Legal Documents</a></li>
                 <li><a href="kids.html">KIDs</a></li>
                 <li><a href="careers.html">Careers</a></li>
               </ul>
@@ -177,7 +177,7 @@
           <li><a class="footer__active">Licenses & Regulations</a></li>
           <li><a href="security-of-funds.html">Security Of Funds</a></li>
           <li><a href="stp-broker.html">STP Broker</a></li>
-          <li><a href="#">Legal Documents</a></li>
+          <li><a href="legal-documents.html">Legal Documents</a></li>
           <li><a href="kids.html">KIDs</a></li>
           <li><a href="careers.html">Careers</a></li>
         </ul>
