--- a/forexglobal/about-us/security-of-funds.html
+++ b/forexglobal/about-us/security-of-funds.html
@@ -54,7 +54,7 @@
                 <li><a href="licenses-and-regulations.html">Licenses and Regulations</a></li>
                 <li><a>Security of Funds</a></li>
                 <li><a href="stp-broker.html">STP Broker</a></li>
-                <li><a href="#">Legal Documents</a></li>
+                <li><a href="legal-documents.html">Legal Documents</a></li>
                 <li><a href="kids.html">KIDs</a></li>
                 <li><a href="careers.html">Careers</a></li>
               </ul>
@@ -155,7 +155,7 @@
           <li><a href="licenses-and-regulations.html">Licenses & Regulations</a></li>
           <li><a class="footer__active">Security Of Funds</a></li>
           <li><a href="stp-broker.html">STP Broker</a></li>
-          <li><a href="#">Legal Documents</a></li>
+          <li><a href="legal-documents.html">Legal Documents</a></li>
           <li><a href="kids.html">KIDs</a></li>
           <li><a href="careers.html">Careers</a></li>
         </ul>
