--- a/forexglobal/about-us/stp-broker.html
+++ b/forexglobal/about-us/stp-broker.html
@@ -54,7 +54,7 @@
                 <li><a href="licenses-and-regulations.html">Licenses and Regulations</a></li>
                 <li><a href="security-of-funds.html">Security of Funds</a></li>
                 <li><a>STP Broker</a></li>
-                <li><a href="#">Legal Documents</a></li>
+                <li><a href="legal-documents.html">Legal Documents</a></li>
                 <li><a href="kids.html">KIDs</a></li>
                 <li><a href="careers.html">Careers</a></li>
               </ul>
@@ -150,7 +150,7 @@
           <li><a href="licenses-and-regulations.html">Licenses & Regulations</a></li>
           <li><a href="security-of-funds.html">Security Of Funds</a></li>
           <li><a class="footer__active">STP Broker</a></li>
-          <li><a href="#">Legal Documents</a></li>
+          <li><a href="legal-documents.html">Legal Documents</a></li>
           <li><a href="kids.html">KIDs</a></li>
           <li><a href="careers.html">Careers</a></li>
         </ul>
