--- a/forexglobal/trading/product-specification.html
+++ b/forexglobal/trading/product-specification.html
@@ -54,7 +54,7 @@
                 <li><a href="../about-us/licenses-and-regulations.html">Licenses and Regulations</a></li>
                 <li><a href="../about-us/security-of-funds.html">Security of Funds</a></li>
                 <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
-                <li><a href="#">Legal Documents</a></li>
+                <li><a href="../about-us/legal-documents.html">Legal Documents</a></li>
                 <li><a href="../about-us/kids.html">KIDs</a></li>
                 <li><a href="../about-us/careers.html">Careers</a></li>
               </ul>
@@ -1065,7 +1065,7 @@
           <li><a href="../about-us/licenses-and-regulations.html">Licenses & Regulations</a></li>
           <li><a href="../about-us/security-of-funds.html">Security Of Funds</a></li>
           <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
-          <li><a href="#">Legal Documents</a></li>
+          <li><a href="../about-us/legal-documents.html">Legal Documents</a></li>
           <li><a href="../about-us/kids.html">KIDs</a></li>
           <li><a href="../about-us/careers.html">Careers</a></li>
         </ul>
