--- a/forexglobal/about-us/security-of-funds.html
+++ b/forexglobal/about-us/security-of-funds.html
@@ -81,7 +81,7 @@
               <ul class="nav__sub">
                 <li><b>Resources</b></li>
                 <li><a href="../resources/glossary.html">Glossary</a></li>
-                <li><a href="#">Tools</a></li>
+                <li><a href="../resources/economic-calendar.html">Economic calendar</a></li>
               </ul>
             </div>
           </li>
@@ -174,7 +174,7 @@
           <li><b>Resources</b></li>
           <li><hr></li>
           <li><a href="../resources/glossary.html">Glossary</a></li>
-          <li><a href="#">Tools</a></li>
+          <li><a href="../resources/economic-calendar.html">Economic calendar</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Contacts</b></li>
