--- a/forexglobal/resources/glossary.html
+++ b/forexglobal/resources/glossary.html
@@ -81,7 +81,7 @@
               <ul class="nav__sub">
                 <li><b>Resources</b></li>
                 <li><a>Glossary</a></li>
-                <li><a href="#">Tools</a></li>
+                <li><a href="economic-calendar.html">Economic calendar</a></li>
               </ul>
             </div>
           </li>
@@ -219,7 +219,7 @@
           <li><b>Resources</b></li>
           <li><hr></li>
           <li><a class="footer__active">Glossary</a></li>
-          <li><a href="#">Tools</a></li>
+          <li><a href="economic-calendar.html">Economic calendar</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Contacts</b></li>
