test svg favicon

--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -7,7 +7,8 @@
   <title>Forex24 Global</title>
   <link rel="stylesheet" href="css/style.min.css">
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg">
+  <!-- <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="194x194" href="img/favicon/favicon-194x194.png">
   <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
@@ -16,9 +17,9 @@
   <link rel="manifest" href="site.webmanifest">
   <meta name="msapplication-config" content="browserconfig.xml">
   <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
-  <meta name="theme-color" content="#5a21ed">
+  <meta name="theme-color" content="#5a21ed"> -->
 </head>
-<body>
+<body><link rel="mask-icon" href="favicon.svg" color="#2f358f">
   <section class="title">
     <header class="header">
       <div class="header__container">
