--- a/forexglobal/trading/account-comparison.html
+++ b/forexglobal/trading/account-comparison.html
@@ -7,6 +7,7 @@
   <title>Account Comparison - Forex24 Global</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
   <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="194x194" href="../img/favicon/favicon-194x194.png">
