--- a/forexglobal/contact-us.html
+++ b/forexglobal/contact-us.html
@@ -5,26 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
   <title>Contact Us - Forex24 Global</title>
-  <link rel="stylesheet" href="../css/style.min.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="../img/favicon/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#2f2861">
-  <link rel="manifest" href="../site.webmanifest">
-  <meta name="msapplication-config" content="../browserconfig.xml">
-  <meta name="msapplication-TileImage" content="../img/favicon/mstile-144x144.png">
+  <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#2f2861">
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="msapplication-config" content="browserconfig.xml">
+  <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
   <meta name="theme-color" content="#5a21ed">
 </head>
 <body>
   <header class="header--inner  header--scroll">
     <div class="header__container">
       <div class="header__flex">
-        <a class="header__logo" href="../index.html">
-          <img src="../img/logo.svg" alt="Forex24 Global">
+        <a class="header__logo" href="index.html">
+          <img src="img/logo.svg" alt="Forex24 Global">
         </a>
         <button class="header__toggle">Open Menu</button>
         <ul class="header__user  header__user--closed">
@@ -150,7 +150,7 @@
       <div class="footer__flex">
         <ul class="footer__ul">
           <li>
-            <img class="footer__logo" src="../img/logo-w.svg" alt="Forex24 Global">
+            <img class="footer__logo" src="img/logo-w.svg" alt="Forex24 Global">
           </li>
           <li>
             <a class="footer__callme" href="#">Call us</a>
@@ -207,6 +207,6 @@
       <p class="footer__text">The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
     </div>
   </footer>
-  <script src="../js/main.min.js" async></script>
+  <script src="js/main.min.js" async></script>
 </body>
 </html>
