--- a/forexglobal/resources/glossary.html
+++ b/forexglobal/resources/glossary.html
@@ -121,6 +121,8 @@
         <li><button>K</button></li>
         <li><button>L</button></li>
         <li><button>M</button></li>
+      </ul>
+      <ul class="glossary__button">
         <li><button>N</button></li>
         <li><button>O</button></li>
         <li><button>P</button></li>
