--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -76,7 +76,7 @@
               </div>
             </li>
             <li>
-              <a onclick="resources()">Resources</a>
+              <a class="nav__link" onclick="resources()">Resources</a>
               <div class="nav__wrapper  nav__wrapper--closed">
                 <ul class="nav__sub">
                   <li><b>Resources</b></li>
@@ -87,7 +87,7 @@
             </li>
             <li><a href="https://partners.forex24.com/" target="_blank">Partners</a></li>
             <li>
-              <a onclick="contact()">Contact Us</a>
+              <a class="nav__link" onclick="contact()">Contact Us</a>
               <div class="nav__wrapper  nav__wrapper--closed">
                 <ul class="nav__sub">
                   <li><b>Contact Us</b></li>
@@ -276,7 +276,7 @@
         <hr>
         <input type="text" name="First Name" placeholder="First Name" required>
         <input type="text" name="Last Name" placeholder="Last Name" required>
-        <select name="Country" required>
+        <select name="Country" tabindex="0" required>
           <option hidden>Country</option>
           <option value="AF">Afghanistan</option>
         	<option value="AX">Åland Islands</option>
@@ -530,7 +530,7 @@
         </select>
         <input type="email" name="Email" placeholder="Email" required>
         <input type="tel" name="Phone" placeholder="Phone" required>
-        <select name="Account" required>
+        <select name="Account" tabindex="0" required>
           <option hidden>Account Type</option>
           <option value="zulu">ZuluTrade</option>
           <option value="real">Real</option>
@@ -562,10 +562,10 @@
             <a class="footer__callme" href="#">Call us</a>
           </li>
           <li class="footer__social">
-            <a class="footer__link  footer__link--fb" href="#"></a>
-            <a class="footer__link  footer__link--li" href="#"></a>
+            <a class="footer__link  footer__link--fb" href="https://www.facebook.com/forex24com/" target="_blank"></a>
+            <a class="footer__link  footer__link--li" href="https://www.linkedin.com/in/forex24com/" target="_blank"></a>
             <a class="footer__link  footer__link--gp" href="#"></a>
-            <a class="footer__link  footer__link--tw" href="#"></a>
+            <a class="footer__link  footer__link--tw" href="https://twitter.com/forex24com/" target="_blank"></a>
           </li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
@@ -598,8 +598,8 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>Contacts</b></li>
           <li><hr></li>
-          <li>Customer Service<br>CY Number: +35725000199</li><br>
-          <li>Support<br>Support@forex24.com<br>UK Number: +442080891644</li>
+          <li>Customer Service<br>CY Number: <a href="tel:+35725000199">+35725000199</a></li><br>
+          <li>Support<br>UK Number: <a href="tel:+442080891644">+442080891644</a><br><a href="mailto:support@forex24.com">support@forex24.com</a></li>
         </ul>
       </div>
         <hr class="footer__hr">
