--- a/forexglobal/trading/announcements.html
+++ b/forexglobal/trading/announcements.html
@@ -77,7 +77,7 @@
             </div>
           </li>
           <li>
-            <a onclick="resources()">Resources</a>
+            <a class="nav__link" onclick="resources()">Resources</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Resources</b></li>
@@ -88,7 +88,7 @@
           </li>
           <li><a href="https://partners.forex24.com/" target="_blank">Partners</a></li>
           <li>
-            <a onclick="contact()">Contact Us</a>
+            <a class="nav__link" onclick="contact()">Contact Us</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><b>Contact Us</b></li>
@@ -143,10 +143,10 @@
             <a class="footer__callme" href="#">Call us</a>
           </li>
           <li class="footer__social">
-            <a class="footer__link  footer__link--fb" href="#"></a>
-            <a class="footer__link  footer__link--li" href="#"></a>
+            <a class="footer__link  footer__link--fb" href="https://www.facebook.com/forex24com/" target="_blank"></a>
+            <a class="footer__link  footer__link--li" href="https://www.linkedin.com/in/forex24com/" target="_blank"></a>
             <a class="footer__link  footer__link--gp" href="#"></a>
-            <a class="footer__link  footer__link--tw" href="#"></a>
+            <a class="footer__link  footer__link--tw" href="https://twitter.com/forex24com/" target="_blank"></a>
           </li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
@@ -180,7 +180,7 @@
           <li><b>Contacts</b></li>
           <li><hr></li>
           <li>Customer Service<br>CY Number: +35725000199</li><br>
-          <li>Support<br>Support@forex24.com<br>UK Number: +442080891644</li>
+          <li>Support<br>UK Number: +442080891644<br>support@forex24.com</li>
         </ul>
       </div>
         <hr class="footer__hr">
