--- a/forexglobal/about-us/kids.html
+++ b/forexglobal/about-us/kids.html
@@ -51,7 +51,6 @@
             <a class="nav__link" onclick="about()">About</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><b>About</b></li>
                 <li><a href="licenses-and-regulations.html">Licenses and Regulations</a></li>
                 <li><a href="security-of-funds.html">Security of Funds</a></li>
                 <li><a href="stp-broker.html">STP Broker</a></li>
@@ -65,7 +64,6 @@
             <a class="nav__link" onclick="trading()">Trading</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><b>Trading</b></li>
                 <li><a href="../trading/account-types.html">Account Types</a></li>
                 <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
                 <li><a href="../trading/product-specification.html">Product Specification</a></li>
@@ -80,7 +78,6 @@
             <a class="nav__link" onclick="resources()">Resources</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><b>Resources</b></li>
                 <li><a href="../resources/glossary.html">Glossary</a></li>
                 <li><a href="../resources/economic-calendar.html">Economic calendar</a></li>
               </ul>
@@ -91,7 +88,6 @@
             <a class="nav__link" onclick="contact()">Contact Us</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><b>Contact Us</b></li>
                 <li><a href="../contact-us.html">Contact Us</a></li>
                 <li><a href="../faq.html">FAQ</a></li>
               </ul>
@@ -138,7 +134,7 @@
             <img class="footer__logo" src="../img/logo-w.svg" alt="Forex24 Global">
           </li>
           <li>
-            <a class="footer__callme" href="#">Call us</a>
+            <a class="footer__callme" href="tel:+442080891644">Call us</a>
           </li>
           <li class="footer__social">
             <a class="footer__link  footer__link--fb" href="https://www.facebook.com/forex24com/" target="_blank"></a>
