--- a/forexglobal/trading/account-comparison.html
+++ b/forexglobal/trading/account-comparison.html
@@ -164,8 +164,8 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>Contacts</b></li>
           <li><hr></li>
-          <li>Customer Service<br>CY Number: +35725000199</li><br>
-          <li>Support<br>UK Number: +442080891644<br>support@forex24.com</li>
+          <li>Customer Service<br>CY Number: <a href="tel:+35725000199">+35725000199</a></li><br>
+          <li>Support<br>UK Number: <a href="tel:+442080891644">+442080891644</a><br><a href="mailto:support@forex24.com">support@forex24.com</a></li>
         </ul>
       </div>
         <hr class="footer__hr">
