zulu fucking trade, i hate this job

--- a/forexglobal/trading/platforms/zulutrade.html
+++ b/forexglobal/trading/platforms/zulutrade.html
@@ -130,7 +130,7 @@
           </ul>
         </div>
         <hr>
-        <div class="zulu__name">How does it work?</div>
+        <h2 class="zulu__name">How does it work?</h2>
         <div class="zulu__flex">
           <div class="zulu__left">
             <p>Simply choose from 100,000+ users from 192 countries you want to follow based on a multitude performance factors including stability, exposure and minimum equity required. Check out the Performance Table for live updates!</p>
@@ -145,7 +145,7 @@
               <li>other performance metrics</li>
             </ul>
           </div>
-          <iframe width="470" height="360" src="https://www.zulutrade.com/widgets/performance?base=forex24" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe class="zulu__iframe" width="470" height="360" src="https://www.zulutrade.com/widgets/performance?base=forex24" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
         <hr>
         <div class="tab">
@@ -1821,7 +1821,27 @@
           </table>
         </div>
         <hr>
-        
+        <h3 class="zulu__name">Additional information</h3>
+        <div class="zulu__flex">
+          <div class="zulu__left">
+            <button class="zulu__accordion">ZuluGuard</button>
+            <div class="zulu__content">
+              <p>A highly advanced account protection feature that monitors your performance 24/7, and steps in to protect your invested capital whenever needed.</p>
+            </div>
+            <button class="zulu__accordion">ZuluRank</button>
+            <div class="zulu__content">
+              <p>A sophisticated algorithm that ranks Signal Providers by analysing a number of different factors, such as their overall performance (number of pips earned, drawdown, average number of pips per trade etc), stability (whether there are no significant ups and downs in trades), maturity (how long they have been trading for), exposure (how many positions may be opened at the same time), minimum equity required to follow all the trader’s positions, and other performance metrics. All these factors are calculated in a single ranking formula in order to provide forex investors with the easiest way to select the strategy that best suits their trading style.</p>
+            </div>
+            <button class="zulu__accordion">Automator</button>
+            <div class="zulu__content">
+              <p>The Automator is an innovative tool which allows ZuluTrade users to create and execute their own automated rules, using an ‘if this, then that’ logic, and essentially create their own custom settings. The Automator can watch and notify you when things happen on your account or can automatically execute any action you would otherwise perform yourself.</p>
+            </div>
+            <a href="../../img/pdf/ZuluTrade-EU-Guide.pdf" target="_blank">Please review the EU ZuluTrade Guide</a>
+          </div>
+          <div class="zulu__right">
+            
+          </div>
+        </div>
         <hr>
         <div class="inner__try">
           <div class="container">
