--- a/forexglobal/resources/economic-calendar.html
+++ b/forexglobal/resources/economic-calendar.html
@@ -68,7 +68,7 @@
                 <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
                 <li><a href="../trading/product-specification.html">Product Specification</a></li>
                 <li><a href="../trading/trading-specification.html">Trading Specification</a></li>
-                <li><a href="#">Platforms</a></li>
+                <li><a href="../trading/platforms.html">Platforms</a></li>
                 <li><a href="../trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
                 <li><a href="../trading/announcements.html">Announcements</a></li>
               </ul>
@@ -151,7 +151,7 @@
           <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
           <li><a href="../trading/product-specification.html">Product Spesification</a></li>
           <li><a href="../trading/trading-specification.html">Trading Spesification</a></li>
-          <li><a href="#">Platforms</a></li>
+          <li><a href="../trading/platforms.html">Platforms</a></li>
           <li><a href="../trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
           <li><a href="../trading/announcements.html">Announcements</a></li>
         </ul>
