--- a/forexglobal/trading/funding-and-withdrawal.html
+++ b/forexglobal/trading/funding-and-withdrawal.html
@@ -68,7 +68,7 @@
                 <li><a href="account-comparison.html">Account Comparison</a></li>
                 <li><a href="product-specification.html">Product Specification</a></li>
                 <li><a href="trading-specification.html">Trading Specification</a></li>
-                <li><a href="#">Platforms</a></li>
+                <li><a href="platforms.html">Platforms</a></li>
                 <li><a>Funding and Withdrawal</a></li>
                 <li><a href="announcements.html">Announcements</a></li>
               </ul>
@@ -337,7 +337,7 @@
           <li><a href="account-comparison.html">Account Comparison</a></li>
           <li><a href="product-specification.html">Product Spesification</a></li>
           <li><a href="trading-specification.html">Trading Spesification</a></li>
-          <li><a href="#">Platforms</a></li>
+          <li><a href="platforms.html">Platforms</a></li>
           <li><a class="footer__active">Funding and Withdrawal</a></li>
           <li><a href="announcements.html">Announcements</a></li>
         </ul>
