--- a/forexglobal/trading/platforms.html
+++ b/forexglobal/trading/platforms.html
@@ -4,27 +4,27 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
-  <title>Desktop - Forex24 Global</title>
-  <link rel="stylesheet" href="../../css/style.min.css">
+  <title>Platforms - Forex24 Global</title>
+  <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="../../img/favicon/favicon.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../../img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="../../img/favicon/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="../../img/favicon/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="../../img/favicon/safari-pinned-tab.svg" color="#2f2861">
-  <link rel="manifest" href="../../site.webmanifest">
-  <meta name="msapplication-config" content="../../browserconfig.xml">
-  <meta name="msapplication-TileImage" content="../../img/favicon/mstile-144x144.png">
+  <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="../img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#2f2861">
+  <link rel="manifest" href="../site.webmanifest">
+  <meta name="msapplication-config" content="../browserconfig.xml">
+  <meta name="msapplication-TileImage" content="../img/favicon/mstile-144x144.png">
   <meta name="theme-color" content="#5a21ed">
 </head>
 <body>
   <header class="header--inner  header--scroll">
     <div class="header__container">
       <div class="header__flex">
-        <a class="header__logo" href="../../index.html">
-          <img src="../../img/logo.svg" alt="Forex24 Global">
+        <a class="header__logo" href="../index.html">
+          <img src="../img/logo.svg" alt="Forex24 Global">
         </a>
         <button class="header__toggle">Open Menu</button>
         <ul class="header__user  header__user--closed">
@@ -51,12 +51,12 @@
             <a class="nav__link" onclick="about()">About</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><a href="../../about-us/licenses-and-regulations.html">Licenses and Regulations</a></li>
-                <li><a href="../../about-us/security-of-funds.html">Security of Funds</a></li>
-                <li><a href="../../about-us/stp-broker.html">STP Broker</a></li>
-                <li><a href="../../about-us/legal-documents.html">Legal Documents</a></li>
-                <li><a href="../../about-us/kids.html">KIDs</a></li>
-                <li><a href="../../about-us/careers.html">Careers</a></li>
+                <li><a href="../about-us/licenses-and-regulations.html">Licenses and Regulations</a></li>
+                <li><a href="../about-us/security-of-funds.html">Security of Funds</a></li>
+                <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
+                <li><a href="../about-us/legal-documents.html">Legal Documents</a></li>
+                <li><a href="../about-us/kids.html">KIDs</a></li>
+                <li><a href="../about-us/careers.html">Careers</a></li>
               </ul>
             </div>
           </li>
@@ -64,13 +64,13 @@
             <a class="nav__link" onclick="trading()">Trading</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><a href="../account-types.html">Account Types</a></li>
-                <li><a href="../account-comparison.html">Account Comparison</a></li>
-                <li><a href="../product-specification.html">Product Specification</a></li>
-                <li><a href="../trading-specification.html">Trading Specification</a></li>
-                <li><a href="../platforms.html">Platforms</a></li>
-                <li><a href="../funding-and-withdrawal.html">Funding and Withdrawal</a></li>
-                <li><a href="../announcements.html">Announcements</a></li>
+                <li><a href="account-types.html">Account Types</a></li>
+                <li><a href="account-comparison.html">Account Comparison</a></li>
+                <li><a href="product-specification.html">Product Specification</a></li>
+                <li><a href="trading-specification.html">Trading Specification</a></li>
+                <li><a>Platforms</a></li>
+                <li><a href="funding-and-withdrawal.html">Funding and Withdrawal</a></li>
+                <li><a href="announcements.html">Announcements</a></li>
               </ul>
             </div>
           </li>
@@ -78,8 +78,8 @@
             <a class="nav__link" onclick="resources()">Resources</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><a href="../../resources/glossary.html">Glossary</a></li>
-                <li><a href="../../resources/economic-calendar.html">Economic calendar</a></li>
+                <li><a href="../resources/glossary.html">Glossary</a></li>
+                <li><a href="../resources/economic-calendar.html">Economic calendar</a></li>
               </ul>
             </div>
           </li>
@@ -88,8 +88,8 @@
             <a class="nav__link" onclick="contact()">Contact Us</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><a href="../../contact-us.html">Contact Us</a></li>
-                <li><a href="../../faq.html">FAQ</a></li>
+                <li><a href="../contact-us.html">Contact Us</a></li>
+                <li><a href="../faq.html">FAQ</a></li>
               </ul>
             </div>
           </li>
@@ -102,41 +102,51 @@
   </header>
   <section class="inner">
     <div class="container">
-      <h1 class="inner__name">Desktop</h1>
-      <p class="inner__text">MetaTrader is the most popular front-end application in the industry. Forex24 MT4 has taken the MetaTrader MT4 platform and introduced its liquidity to create a user-friendly front-end trading interface with interbank liquidity and fast execution.</p>
-      <div class="inner__flex  inner__flex--list">
-        <div class="inner__mockup  inner__mockup--desktop"></div>
-        <div class="inner__list">
-          <b>Benefits:</b>
-          <ul>
-            <li>Ease of use through its user friendly interface</li>
-            <li>Multiple charting and analysis</li>
-            <li>Multilingual platform</li>
-            <li>Real time client account summary</li>
-            <li>It requires NO download.<br>Simply login and trade from your browser</li>
-            <li>One-Click Trading allows you to place trades<br>in a mouse click</li>
-            <li>Get real-time quotes in MarketWatch</li>
-            <li>9 chart time frames</li>
-            <li>Trading from charts & monitor active orders on the chart</li>
-            <li>Advanced analysis tools</li>
-          </ul>
+      <h1 class="inner__name">Trading platforms</h1>
+      <p class="inner__text  inner__text--platforms">Forex24 pioneered the offering of an MT4 platform with trading execution quality in mind. Trade on MT4 with No Requotes, No Rejections with flexible leverage ranging from 1:1 – to 400:1</p>
+      <div class="inner__flex  inner__flex--platforms">
+        <div class="inner__mockup  inner__mockup--web"></div>
+        <div class="inner__desc">
+          <b>Webtrader platform</b>
+          <hr>
+          <p>Forex24 Global is providing a new web based trading platform that runs on both PC and Mac. This platform, which can be accessed using clients’ existing mt4 logins, broadens our reach and addresses some ongoing needs of our clients who require a stable and flexible trading solution to access global forex markets.</p>
+          <a class="inner__button  inner__button--start" href="https://webtrader.forex24.com/" target="_blank">Start trading</a>
+          <a class="inner__button  inner__button--more" href="platforms/webtrader.html">Read more</a>
         </div>
       </div>
       <hr>
-      <div class="inner__try">
-        <div class="container">
-          <h2>Try It Now</h2>
-          <div class="inner__links">
-            <a class="inner__real" href="#">
-              Real account<br>
-              <span>start live trading</span>
-            </a>
-            <a class="inner__demo" href="#">
-              Demo account<br>
-              <span>start praccticing for free</span>
-            </a>
-          </div>
+      <div class="inner__flex  inner__flex--platforms  inner__flex--mobile">
+        <div class="inner__desc">
+          <b>Mobile platform</b>
+          <hr>
+          <p>Forex24 Global Mobile offers your traders the same account capabilities as Forex24 Global Webtrader. You can view their account status, closed trades, place and monitor pending orders, execute and modify live trades, and more!</p>
+          <a class="inner__button  inner__button--start" href="#">Start trading</a>
+          <a class="inner__button  inner__button--more" href="platforms/mobile.html">Read more</a>
         </div>
+        <div class="inner__mockup  inner__mockup--mob"></div>
+      </div>
+      <hr>
+      <div class="inner__flex  inner__flex--platforms">
+        <div class="inner__mockup  inner__mockup--des"></div>
+        <div class="inner__desc">
+          <b>Desktop</b>
+          <hr>
+          <p>MetaTrader is the most popular front-end application in the industry. Forex24 MT4 has taken the MetaTrader MT4 platform and introduced its liquidity to create a user-friendly front-end trading interface with interbank liquidity and fast execution.</p>
+          <a class="inner__button  inner__button--start" href="../img/forex24global4setup.zip">Start trading</a>
+          <a class="inner__button  inner__button--more" href="platforms/desktop.html">Read more</a>
+        </div>
+      </div>
+      <hr>
+      <div class="inner__flex  inner__flex--platforms  inner__flex--mobile">
+        <div class="inner__desc">
+          <b>ZuluTrade Social Trading Platform</b>
+          <hr>
+          <p>ZuluTrade is an online trading platform that enables users to locate or subscribe to top performing traders.</p>
+          <p>A trader can execute trades manually or allocate a desirable amount to follow top performing traders, therefore diversifying the investment. The trader can also set risk management parameters in advance of any trading activity, in order to shield against any volatile trading strategy.</p>
+          <a class="inner__button  inner__button--start" href="#">Start trading</a>
+          <a class="inner__button  inner__button--more" href="platforms/zulutrade.html">Read more</a>
+        </div>
+        <div class="inner__mockup  inner__mockup--zulu"></div>
       </div>
     </div>
   </section>
@@ -185,7 +195,7 @@
           <li><a href="../account-comparison.html">Account Comparison</a></li>
           <li><a href="../product-specification.html">Product Spesification</a></li>
           <li><a href="../trading-specification.html">Trading Spesification</a></li>
-          <li><a href="../platforms.html">Platforms</a></li>
+          <li><a class="footer__active">Platforms</a></li>
           <li><a href="../funding-and-withdrawal.html">Funding and Withdrawal</a></li>
           <li><a href="../announcements.html">Announcements</a></li>
         </ul>
