--- a/forexglobal/trading/trading-specification.html
+++ b/forexglobal/trading/trading-specification.html
@@ -68,7 +68,7 @@
                 <li><a href="account-comparison.html">Account Comparison</a></li>
                 <li><a href="product-specification.html">Product Specification</a></li>
                 <li><a>Trading Specification</a></li>
-                <li><a href="#">Platforms</a></li>
+                <li><a href="platforms.html">Platforms</a></li>
                 <li><a href="funding-and-withdrawal.html">Funding and Withdrawal</a></li>
                 <li><a href="announcements.html">Announcements</a></li>
               </ul>
@@ -2354,7 +2354,7 @@
           <li><a href="account-comparison">Account Comparison</a></li>
           <li><a href="product-specification.html">Product Spesification</a></li>
           <li><a class="footer__active">Trading Spesification</a></li>
-          <li><a href="#">Platforms</a></li>
+          <li><a href="platforms.html">Platforms</a></li>
           <li><a href="funding-and-withdrawal.html">Funding and Withdrawal</a></li>
           <li><a href="announcements.html">Announcements</a></li>
         </ul>
