--- a/forexglobal/trading/account-comparison.html
+++ b/forexglobal/trading/account-comparison.html
@@ -68,7 +68,7 @@
                 <li><a>Account Comparison</a></li>
                 <li><a href="product-specification.html">Product Specification</a></li>
                 <li><a href="trading-specification.html">Trading Specification</a></li>
-                <li><a href="#">Platforms</a></li>
+                <li><a href="platforms.html">Platforms</a></li>
                 <li><a href="funding-and-withdrawal.html">Funding and Withdrawal</a></li>
                 <li><a href="announcements.html">Announcements</a></li>
               </ul>
@@ -151,7 +151,7 @@
           <li><a class="footer__active">Account Comparison</a></li>
           <li><a href="product-specification.html">Product Spesification</a></li>
           <li><a href="trading-specification.html">Trading Spesification</a></li>
-          <li><a href="#">Platforms</a></li>
+          <li><a href="platforms.html">Platforms</a></li>
           <li><a href="funding-and-withdrawal.html">Funding and Withdrawal</a></li>
           <li><a href="announcements.html">Announcements</a></li>
         </ul>
