--- a/forexglobal/trading/platforms/mobile.html
+++ b/forexglobal/trading/platforms/mobile.html
@@ -68,7 +68,7 @@
                 <li><a href="../account-comparison.html">Account Comparison</a></li>
                 <li><a href="../product-specification.html">Product Specification</a></li>
                 <li><a href="../trading-specification.html">Trading Specification</a></li>
-                <li><a href="#">Platforms</a></li>
+                <li><a href="../platforms.html">Platforms</a></li>
                 <li><a href="../funding-and-withdrawal.html">Funding and Withdrawal</a></li>
                 <li><a href="../announcements.html">Announcements</a></li>
               </ul>
@@ -185,7 +185,7 @@
           <li><a href="../account-comparison.html">Account Comparison</a></li>
           <li><a href="../product-specification.html">Product Spesification</a></li>
           <li><a href="../trading-specification.html">Trading Spesification</a></li>
-          <li><a href="#">Platforms</a></li>
+          <li><a href="../platforms.html">Platforms</a></li>
           <li><a href="../funding-and-withdrawal.html">Funding and Withdrawal</a></li>
           <li><a href="../announcements.html">Announcements</a></li>
         </ul>
